<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ServicesFragment">
    <LinearLayout
        android:orientation="vertical"
        android:padding="8dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        >

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/service_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dip"
            android:paddingBottom="8dip"
            android:entries="@array/company_dropdown"
            android:scrollbarStyle="insideInset"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/service_layout_reference"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            >
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/service_reference"
                android:hint="@string/service_text_reference"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip"
                />

        </android.support.design.widget.TextInputLayout>
        <ImageButton
            android:id="@+id/checkBalance"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:contentDescription="@string/consult_text_jmas"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_info_blue_700_36dp"
            android:layout_height="50dip" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/service_layout_amout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/service_amount"
                android:hint="@string/service_text_amount"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dip" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/service_send"
            android:text="@string/service_text_send"
            android:textSize="@dimen/StringText"
            android:background="@color/colorPrimary_blue"
            android:textColor="@color/White"
            android:layout_marginTop="8dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/tae_clean"
            android:background="@color/Gray"
            android:text="@string/tae_limpiar_button"
            android:textColor="@color/White"
            android:textSize="@dimen/StringText"
            android:layout_marginTop="8dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
