<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical" tools:context=".Login">

    <com.multimarca.tae.voceadorestae.widgets.ThreeTwoImageView
        android:id="@+id/login_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/login_image"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:layout_below="@id/login_img"
        android:padding="@dimen/padTop"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="8">

        <TextView
            android:id="@+id/login_text"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/LoginString"
            android:text="@string/login_string"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_layout_user"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/login_edit_usertext"
            >
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_user"
                android:inputType="textAutoComplete"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_layout_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/login_edit_passtext"


            >
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/login_pass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_button"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/login_button_text"
            android:textSize="@dimen/StringText"
            android:textColor="@color/White"
            />
        <TextView
            android:id="@+id/update_credentials"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="Cambiar Contraseña"
            android:gravity="center"
            android:onClick="updatePass"
            android:layout_weight="2"
            android:clickable="true"
            android:textSize="@dimen/StringText"
            android:textColor="@color/colorAccent"
            />
    </LinearLayout>



</RelativeLayout>
