<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RVentas">
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/papi_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"                android:layout_width="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            tools:context=".RVentas">


            <include
                android:id="@+id/medium_appbar"
                layout="@layout/toolbar_medium"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/rventas_layout_date"
                android:layout_below="@id/medium_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dip"
                >
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/rventas_datepicker"
                    android:hint="@string/rventas_hint_text"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dip"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_ventas"
                android:layout_below="@id/rventas_layout_date"
                android:layout_width="match_parent"
                android:layout_marginBottom="40dip"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/persistentLayout"
                android:elevation="2dp"
                android:background="@color/colorPrimaryDark_blue"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="8dip"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/rventas_totales_text"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@color/White"
                    android:gravity="center"
                    android:text="@string/rventas_text_hintTotakes"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/rventas_monto_text"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@color/White"
                    android:gravity="center"
                    android:text="@string/rventas_text_hint_totalVenta"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/rventas_fecha_text"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@color/White"
                    android:gravity="center"
                    android:text="@string/rventas_text_hintFecha"
                    android:layout_height="wrap_content" />


            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

    <fragment
        android:layout_height="match_parent"
        android:layout_width="280dip"
        android:layout_gravity="start"
        app:layout="@layout/fragment_drawer_menu"
        android:id="@+id/fragment_menu"
        android:name="com.multimarca.tae.voceadorestae.Fragments.Drawer_menu"
        tools:layout="@layout/fragment_drawer_menu" />
</android.support.v4.widget.DrawerLayout>
